manifests/easytravel-loadgen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: easytravel
    tier: loadgen
  name: loadgen
  namespace: easytravel
spec:
  selector:
    matchLabels:
      app: easytravel
      tier: loadgen
  replicas: 1
  template:
    metadata:
      labels:
        app: easytravel
        tier: loadgen
        app.kubernetes.io/name: easytravel-loadgen
        app.kubernetes.io/instance: easytravel-loadgen-1.0.0
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: loadgen
        app.kubernetes.io/part-of: easytravel
        app.kubernetes.io/managed-by: kubernetes
        app.kubernetes.io/created-by: brayden
        dynatrace-release-stage: stable
      annotations:
        contact: "demo@dynatrace.com"
        priority: "low"
        tier: loadgen
        app: easytravel
    spec:
      containers:
      - image: dynatrace/easytravel-headless-loadgen:latest
        name: loadgen
        resources:
          limits:
            cpu: 500m
            memory: 3096Mi
          requests:
            cpu: 200m
            memory: 2000Mi
