manifests/easytravel-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easytravel-backend
  namespace: easytravel
spec:
  selector:
    matchLabels:
        app: easytravel
        tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: easytravel
        tier: backend
        app.kubernetes.io/name: easytravel-backend
        app.kubernetes.io/instance: easytravel-backend-1.0.0
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: easytravel
        app.kubernetes.io/managed-by: kubernetes
        app.kubernetes.io/created-by: brayden
        dynatrace-release-stage: stable
      annotations:
        contact: "demo@dynatrace.com"
        priority: "high"
        tier: backend
        app: easytravel
    spec:
      containers:
      - image: dynatrace/easytravel-backend:latest
        name: easytravel-backend
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 8080
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #     scheme: HTTP
        #   initialDelaySeconds: 5
        # livenessProbe:
        #   httpGet:
        #     path: /services/JourneyService/getLocations
        #     port: 8080
        #     scheme: HTTP
        #   initialDelaySeconds: 120
        #   periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easytravel
    tier: backend
  name: easytravel-backend
  namespace: easytravel
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: easytravel
    tier: backend
  type: ClusterIP
