manifests/easytravel-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easytravel-www
  namespace: easytravel
spec:
  selector:
    matchLabels:
      app: easytravel
      tier: web
  replicas: 1
  template:
    metadata:
      labels:
        app: easytravel
        tier: web
        app.kubernetes.io/name: easytravel-nginx
        app.kubernetes.io/instance: easytravel-nginx-1.0.0
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: webserver
        app.kubernetes.io/part-of: easytravel
        app.kubernetes.io/managed-by: kubernetes
        app.kubernetes.io/created-by: brayden
        dynatrace-release-stage: stable
      annotations:
        contact: "demo@dynatrace.com"
        priority: "high"
        tier: web
        app: easytravel
    spec:
      containers:
      - image: dynatrace/easytravel-nginx:latest
        name: easytravel-www
        ports:
        - containerPort: 80
        - containerPort: 9079
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easytravel
    tier: web
  name: easytravel-www
  namespace: easytravel
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: easytravel
    tier: web
  type: LoadBalancer
